Add support for the JsonGenerator.PRETTY_PRINTING option